- TWEAK: Improve shopping cart count HTML markup for easier styling.
- TWEAK: Improve page settings meta box with clearer information.
- TWEAK: Improve Gutenberg editor CSS.
- TWEAK: Improve WooCommerce compatibility CSS.
- TWEAK: Improve default theme's CSS.
- TWEAK: Improve some text strings.
- TWEAK: Update Suki Pro modules list.
- TWEAK: Update Suki admin page looks to be simpler and cleaner.
- FIX: Header or Footer Social links "open in new tab".
- FIX: Footer bottom overflow bug on mobile screen.
- FIX: Header and Footer Builder on Safari Mac.
- FIX: Fix custom CSS of WooCommerce's button typography.
- FIX: Warning on `suki_get_current_page_setting` function.

v0.7.10
- FIX: Single template filter for Elementor library affected all other post types as well.

v0.7.9
- FIX: Remove Elementor and Brizy isolation mode (this caused some problems in multiple cases).

v0.7.8
- TWEAK: Improve Suki admin page with quick links.
- FIX: Brizy editor isolation mode.

v0.7.7
- NEW: Add dedicated template for Elementor Template with "Page" or "Section" types.
- NEW: Elementor preview isolation mode (elements except the main editor is ignoring any mouse event).
- NEW: Brizy preview isolation mode (elements except the main editor is ignoring any mouse event).
- TWEAK: Remove `classList` polyfill JS (unnecessary).
- FIX: Header logo CSS for sticky header integration (used in Suki Pro).
- FIX: Link default colors.

v0.7.6
- FIX: Popup close icon CSS.
- FIX: Footer bottom CSS.

v0.7.5
- FIX: TinyMCE settings filters which caused blank white error on TinyMCE.
- FIX: Minor CSS.

v0.7.4
- FIX: Gutenberg cover image CSS when using parallax and wide alignment mode.

v0.7.3
- FIX: Use selected font family in Gutenberg editor.

v0.7.2
- TWEAK: Improve Gutenberg editor CSS.
- TWEAK: Improve CSS for widgets and other minor elements.
- TWEAK: Improve static pages template hooks.
- TWEAK: Make multiple elements in a footer bottom column displayed inline (previously block).