@@ -213,7 +213,12 @@ class Suki_Admin {
 	 * @return array
 	 */
 	public function add_classic_editor_custom_css( $settings ) {
-		// echo 'halo';
+		// Skip Gutenberg editor page.
+		$current_screen = get_current_screen();
+		if ( method_exists( $current_screen, 'is_block_editor' ) && $current_screen->is_block_editor() ) {
+			return $settings;
+		}
+
 		global $post;
 
 		if ( empty( $post ) ) {
@@ -321,6 +326,12 @@ class Suki_Admin {
 	 * @return array
 	 */
 	public function add_classic_editor_body_class( $settings ) {
+		// Skip Gutenberg editor page.
+		$current_screen = get_current_screen();
+		if ( method_exists( $current_screen, 'is_block_editor' ) && $current_screen->is_block_editor() ) {
+			return $settings;
+		}
+		
 		global $post;
 
 		if ( empty( $post ) ) {
